# small_prog

./: .gitignore  README.md  osszesffi.txt  test_performance
C#/Hatterappformusic3/: Hatterappformusic.sln
C#/KRS_MNB/: Program.cs
C#/Lambda/: Program.cs
C#/Lordi4/: Program.cs
C#/RudiAi/: RudiAi.cs
C#/SNettester/: Program.cs  SNettester.sln  testclass.cs  vasarlas.cs
C#/arduinousbjoy/: arduinousbjoy.sln
C#/emailküldés/: emailküldés.sln  Új szöveges dokumentum (2).txt
C#/miditoheader/: miditoheader.sln
C#/serialports/: serialports.sln
C#/zenelo/: zenelo.sln
C++/Imgui_opengl/: CMakeLists.txt  main.cpp
C++/Myrar/: Myrar.cbp  main.cpp
C++/c++_grafika-régi/: kivalaszto.hpp  szambeallito.hpp  szambox.hpp
C++/funwithtemplate/: FUNFunctions.h  FUNTemplete.h  funwithtemplate.cbp  funwithtemplate.depend  main.cpp
C++/gpu_call/: gpu_call.cbp  gpu_call.depend  main.cpp  myheader.h
C++/palifor/: Timer.cpp  Timer.h  main.cpp  (+1 more)
arduino/: led.ino  led_state.ino  ledstrip2.ino
javascript/: mainjavascript.js
mathlab/: lifesaver.m  matrix.m  miafranc.m
pyton/: Cryptográfia jegyzőkönyv 2+ellenörzés.docx  Cryptográfia jegyzőkönyv 2.docx  ITKoin_01_Schmidt_Laszlo.py  ITKoin_01_Schmidt_Laszlo2.py  ITKoin_01_Schmidt_Laszlobackup.py  ITKoin_02.py  ITKoin_02_Schmidt_laszlo.py  Mesterséges Intelligencián alapuló felderítő.docx  chain_01.txt  csmkey_01_id.txt  csmkey_01_priv.pem  csmkey_01_pub.pem  csmkey_02_id.txt  csmkey_02_priv.pem  csmkey_02_pub.pem  csmkey_03_id.txt  csmkey_03_priv.pem  csmkey_03_pub.pem  key.priv  pip
swift/: beadni.swift  swift2.swift
(+801 files in other folders)
